--- a/LaTeX/OnlineAppendix.tex
+++ b/LaTeX/OnlineAppendix.tex
@@ -98,11 +98,11 @@
 
 \setcounter{figure}{10}
 
-\setcounter{equation}{7}
+\setcounter{equation}{8}
 
 \appendix
 
-\section*{Online Appendix}
+\section*{Online Appendix for ``Self-Reported Health Status and Latent Health Dynamics''}
 
 Appendix~\ref{app:LitQuotes} expands on the discussion in Section~\ref{sec:StructuralSRHS} to provide more detailed references to how SRHS has been used to estimate or calibrate health dynamics in structural models. Appendix~\ref{app:Estimation} provides details on the numeric methods used to compute the log likelihood function for the latent health model, which were only summarized in Section~\ref{sec:Estimation}. Appendix~\ref{app:MoreSpecs} presents additional specifications of the latent health model, including on the HRS, PSID, and MEPS data independently as well as a simplified model that drops two key features. Appendix~\ref{app:MoreFigs} provides many more figures related to those in the main paper, but were excluded for length and space considerations.
 
